docs/7.58/md/abenst_format_option_abexa.md
---
title: "ST - Formatting Options"
description: |
  This example demonstrates how ABAP types are mapped using formatting options. Source Code  Public class definition CLASS cl_demo_st_format_option DEFINITION INHERITING FROM cl_demo_classrun PUBLIC CREATE PUBLIC. PUBLIC SECTION. METHODS main REDEFINITION. METHODS call_transformation CHANGING
version: "7.58"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenst_format_option_abexa.htm"
abapFile: "abenst_format_option_abexa.htm"
keywords: ["do", "if", "try", "catch", "method", "class", "data", "types", "abenst", "format", "option", "abexa"]
---

* * *

AS ABAP Release 758, ©Copyright 2024 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_xml.htm) →  [XML - Transformations](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_xml_trafos.htm) →  [Simple Transformations (ST)](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_st.htm) →  [ST - Serialization and Deserialization](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenst_serial_deserial.htm) →  [ST - Transformation of ABAP Values](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenst_abap_values.htm) →  [ST - tt:value, Elementary Data Objects](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenst_tt_value_elementary.htm) →  [ST - option, Mapping Rules](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenst_option.htm) →  [ST - option, Mapping Rules for Elementary Types](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenst_option_format.htm) → 

 [![](Mail.gif?object=Mail.gif "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback%20on%20ABAP%20Documentation&body=Document:%20ST%20-%20Formatting%20Options%2C%20ABENST_FORMAT_OPTION_ABEXA%2C%20758%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion%20for%20improvement:)

ST - Formatting Options

This example demonstrates how ABAP types are mapped using formatting options.

Source Code   

\* Public class definition
CLASS cl\_demo\_st\_format\_option DEFINITION
  INHERITING FROM cl\_demo\_classrun
  PUBLIC
  CREATE PUBLIC.
  PUBLIC SECTION.
    METHODS main REDEFINITION.
    METHODS call\_transformation
      CHANGING writer TYPE REF TO cl\_sxml\_string\_writer.
    DATA:
      boolean        TYPE abap\_bool,
      hex            TYPE xstring VALUE '0123456789ABCDEF',
      utclong        TYPE utclong,
      datetime       TYPE timestamp,
      datetime\_long  TYPE timestampl,
      datetimeoffset TYPE c LENGTH 18,
      datetimelocal  TYPE c LENGTH 14,
      guid\_16        TYPE x LENGTH 16,
      guid\_32        TYPE c LENGTH 32,
      guid\_22        TYPE c LENGTH 22,
      qname1         TYPE string VALUE \`{uri\_1}name1\`,
      qname2         TYPE string VALUE \`{uri\_2}name2\`,
      uri            TYPE string VALUE \`:;<=>?\[\\\]^\_\`\`{|}~\`,
      uri1           TYPE string VALUE \`Rock'n'Roll & Blues\`,
      language       TYPE sy-langu VALUE 'E',
      currcode       TYPE tcurc-waers VALUE 'EUR',
      unitcode       TYPE t006-msehi VALUE 'TON',
      number         TYPE p DECIMALS 3 VALUE '123.000',
      numtext        TYPE n LENGTH 10 VALUE '0000123456'.
ENDCLASS.
\* Public class implementation
CLASS cl\_demo\_st\_format\_option IMPLEMENTATION.
  METHOD main.
    utclong        = utclong\_current( ).
    datetime       = cl\_abap\_tstmp=>utclong2tstmp\_short( utclong ).
    datetime\_long  = cl\_abap\_tstmp=>utclong2tstmp( utclong ).
    datetimeoffset = |{ datetime WIDTH = 14 }+180|.
    datetimelocal  = datetime.
    FINAL(system\_uuid) = cl\_uuid\_factory=>create\_system\_uuid( ).
    TRY.
        guid\_16 = system\_uuid->create\_uuid\_x16( ).
        guid\_32 = system\_uuid->create\_uuid\_c32( ).
        guid\_22 = system\_uuid->create\_uuid\_c22( ).
      CATCH cx\_uuid\_error.
        CLEAR guid\_16.
        CLEAR guid\_32.
        CLEAR guid\_22.
    ENDTRY.
    out->next\_section( 'XML' ).
    DATA(writer) = cl\_sxml\_string\_writer=>create(
            type = if\_sxml=>co\_xt\_xml10 ).
    call\_transformation( CHANGING writer = writer ).
    DATA(result) = writer->get\_output( ).
    out->write\_xml( result
       )->next\_section( 'JSON' ).
    writer = cl\_sxml\_string\_writer=>create(
      type = if\_sxml=>co\_xt\_json ).
    call\_transformation( CHANGING writer = writer ).
    result = writer->get\_output( ).
    out->write\_json( result ).
  ENDMETHOD.
  METHOD call\_transformation.
    FINAL(user\_time) = cl\_demo\_date\_time=>get\_user\_time( ).
    FINAL(user\_date) = cl\_demo\_date\_time=>get\_user\_date( ).
    CALL TRANSFORMATION demo\_st\_format\_option
      SOURCE boolean        = boolean
             hex            = hex
             time           = user\_time
             date           = user\_date
             utclong        = utclong
             datetime       = datetime
             datetime\_long  = datetime\_long
             datetimeoffset = datetimeoffset
             datetimelocal  = datetimelocal
             guid\_16        = guid\_16
             guid\_32        = guid\_32
             guid\_22        = guid\_22
             qname1         = qname1
             qname2         = qname2
             uri            = uri
             urifull        = uri
             uri1           = uri1
             language       = language
             currcode       = currcode
             unitcode       = unitcode
             number         = number
             numtext        = numtext
      RESULT XML writer.
  ENDMETHOD.
ENDCLASS.

Description   

This example passes various types of ABAP data to the transformation DEMO\_ST\_FORMAT\_OPTION and provides the result for XML and [JSON](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_json.htm). The transformation applies those [formatting options](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenst_option_format.htm) to the ABAP data that match its data type:

<?sap.transform simple?>
<tt:transform xmlns:tt="http://www.sap.com/transformation-templates">
  <tt:root name="BOOLEAN"/>
  <tt:root name="HEX"/>
  <tt:root name="TIME"/>
  <tt:root name="DATE"/>
  <tt:root name="DATETIME"/>
  <tt:root name="DATETIME\_LONG"/>
  <tt:root name="UTCLONG"/>
  <tt:root name="DATETIMEOFFSET"/>
  <tt:root name="DATETIMELOCAL"/>
  <tt:root name="GUID\_16"/>
  <tt:root name="GUID\_32"/>
  <tt:root name="GUID\_22"/>
  <tt:root name="QNAME1"/>
  <tt:root name="QNAME2"/>
  <tt:root name="URI"/>
  <tt:root name="URIFULL"/>
  <tt:root name="URI1"/>
  <tt:root name="LANGUAGE"/>
  <tt:root name="CURRCODE"/>
  <tt:root name="UNITCODE"/>
  <tt:root name="NUMBER"/>
  <tt:root name="NUMTEXT"/>
  <tt:template>
    <array>
      <object>
        <bool name="boolean">
          <tt:value option="format(boolean)"
                    ref="BOOLEAN"/>
        </bool>
        <str name="hex">
          <tt:value option="format(hex)"
                    ref="HEX"/>
        </str>
        <str name="dateTime for UTCLONG">
          <tt:value option="format(dateTime)"
                    ref="UTCLONG"/>
        </str>
        <str name="dateTime for TIMESTAMP">
          <tt:value option="format(dateTime)"
                    ref="DATETIME"/>
        </str>
        <str name="dateTime for TIMESTAMPL">
          <tt:value option="format(dateTime)"
                    ref="DATETIME\_LONG"/>
        </str>
        <str name="dateTimeOffset for c, LENGTH 18">
          <tt:value option="format(dateTimeOffset)"
                    ref="DATETIMEOFFSET"/>
        </str>
        <str name="dateTimeOffset for UTCLONG">
          <tt:value option="format(dateTimeOffset)"
                    ref="UTCLONG"/>
        </str>
        <str name="dateTimeOffset for TIMESTAMP">
          <tt:value option="format(dateTimeOffset)"
                    ref="DATETIME"/>
        </str>
        <str name="dateTimeOffset for TIMESTAMPL">
          <tt:value option="format(dateTimeOffset)"
                    ref="DATETIME\_LONG"/>
        </str>
        <str name="dateTimeLocal for c, LENGTH 14">
          <tt:value option="format(dateTimeLocal)"
                    ref="DATETIMELOCAL"/>
        </str>
        <str name="dateTimeLocal for UTCLONG">
          <tt:value option="format(dateTimeLocal)"
                    ref="UTCLONG"/>
        </str>
        <str name="dateTimeLocal for TIMESTAMP">
          <tt:value option="format(dateTimeLocal)"
                    ref="DATETIME"/>
        </str>
        <str name="dateTimeLocal for TIMESTAMPL">
          <tt:value option="format(dateTimeLocal)"
                    ref="DATETIME\_LONG"/>
        </str>
        <str name="ticks for d">
          <tt:value option="format(ticks)"
                    ref="DATE"/>
        </str>
        <str name="ticks for UTCLONG">
          <tt:value option="format(ticks)"
                    ref="UTCLONG"/>
        </str>
        <str name="ticks for TIMESTAMP">
          <tt:value option="format(ticks)"
                    ref="DATETIME"/>
        </str>
        <str name="ticks for TIMESTAMPL">
          <tt:value option="format(ticks)"
                    ref="DATETIME\_LONG"/>
        </str>
        <str name="ticksOffset for c, LENGTH 18">
          <tt:value option="format(ticksOffset)"
                    ref="DATETIMEOFFSET"/>
        </str>
        <str name="ticksOffset for UTCLONG">
          <tt:value option="format(ticksOffset)"
                    ref="UTCLONG"/>
        </str>
        <str name="ticksOffset for TIMESTAMP">
          <tt:value option="format(ticksOffset)"
                    ref="DATETIME"/>
        </str>
        <str name="ticksOffset for TIMESTAMPL">
          <tt:value option="format(ticksOffset)"
                    ref="DATETIME\_LONG"/>
        </str>
        <str name="duration">
          <tt:value option="format(duration)"
                    ref="TIME"/>
        </str>
        <str name="guid for X, LENGTH 16">
          <tt:value option="format(guid)"
                    ref="GUID\_16"/>
        </str>
        <str name="guid for C, LENGTH 32">
          <tt:value option="format(guid)"
                    ref="GUID\_32"/>
        </str>
        <str name="guid for C, LENGTH 22">
          <tt:value option="format(guid)"
                    ref="GUID\_22"/>
        </str>
        <str name="qName, first">
          <tt:value option="format(qName)"
                    ref="QNAME1"/>
        </str>
        <str name="qName, second">
          <tt:value option="format(qName)"
                    ref="QNAME2"/>
        </str>
        <str name="uri">
          <tt:value option="format(uri)"
                    ref="URI"/>
        </str>
        <str name="uriFull">
          <tt:value option="format(uriFull)"
                    ref="URIFULL"/>
        </str>
        <str name="uri1 for string">
          <tt:value option="format(uri1)"
                    ref="URI1"/>
        </str>
        <str name="uri1 for xstring">
          <tt:value option="format(uri1)"
                    ref="HEX"/>
        </str>
        <str name="uri1 for t">
          <tt:value option="format(uri1)"
                    ref="TIME"/>
        </str>
        <str name="uri1 for UTCLONG">
          <tt:value option="format(uri1)"
                    ref="UTCLONG"/>
        </str>
        <str name="uri1 for TIMESTAMP">
          <tt:value option="format(uri1)"
                    ref="DATETIME"/>
        </str>
        <str name="uri1 for TIMESTAMPL">
          <tt:value option="format(uri1)"
                    ref="DATETIME\_LONG"/>
        </str>
        <str name="uri2 for guid\_16">
          <tt:value option="format(uri2)"
                    ref="GUID\_16"/>
        </str>
        <str name="uri2 for guid\_32">
          <tt:value option="format(uri2)"
                    ref="GUID\_32"/>
        </str>
        <str name="uri2 for d">
          <tt:value option="format(uri2)"
                    ref="DATE"/>
        </str>
        <str name="uri2 for UTCLONG">
          <tt:value option="format(uri2)"
                    ref="UTCLONG"/>
        </str>
        <str name="uri2 for TIMESTAMP">
          <tt:value option="format(uri2)"
                    ref="DATETIME"/>
        </str>
        <str name="uri2 for TIMESTAMPL">
          <tt:value option="format(uri2)"
                    ref="DATETIME\_LONG"/>
        </str>
        <str name="language">
          <tt:value option="format(language),noError"
                    ref="LANGUAGE"/>
        </str>
        <str name="currCode">
          <tt:value option="format(currCode),noError"
                    ref="CURRCODE"/>
        </str>
        <str name="unitCode">
          <tt:value option="format(unitCode),noError"
                    ref="UNITCODE"/>
        </str>
        <str name="currency=CURRCODE">
          <tt:value option="format(currency=CURRCODE)"
                    ref="NUMBER"/>
        </str>
        <str name="unit=UNITCODE">
          <tt:value option="format(unit=UNITCODE)"
                    ref="NUMBER"/>
        </str>
        <str name="alpha">
          <tt:value option="format(alpha)"
                    ref="NUMTEXT"/>
        </str>
      </object>
    </array>
  </tt:template>
</tt:transform>

The transformation creates [JSON-XML](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenjson_xml_glosry.htm "Glossary Entry") to represent both XML and JSON. It should be noted that the formats ticks and ticksOffset only have a special meaning in JSON, where they create the JSON representation of UNIX time stamps for OData.